Configuration tab widgets not removed when cards disappear
I get the following weird state if I stop wireplumber (with PipeWire), or unload module-alsa-card
(with PulseAudio) while pavucontrol is running:
Restaring wireplumber, or reloading module-udev-detect
(which in turn loads module-alsa-card
) then adds two duplicate widgets:
Only the last two "Profile" choices have any effect, but things go back to normal when pavucontrol is restarted. Looks to me like a UI-only problem where the widgets aren't destroyed when they should be. First bad commit is 52aef7e8 ("Use Gtk4 instead of Gtk3"), but I can't really dig deeper into the code now.