mainwindow: Correctly remove cards when they go away

The reference is owned by the VBox, so we remove it there and it gets
cleaned up, like other widgets.

Fixes: https://gitlab.freedesktop.org/pulseaudio/pavucontrol/-/issues/162
Part-of: <https://gitlab.freedesktop.org/pulseaudio/pavucontrol/-/merge_requests/98>